--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
 </head>
 
 <body>
-    <img src="image.png" width="1250">
+    <img src="image.png" width="400px">
+    <hr>
+
+    <div style="width:0px;height:0px;border-top:100px solid green;border-bottom: 100px solid blue;border-right: 100px solid red;border-left: 100px solid yellow;"></div>
+    <hr>
+    <table>
+        <tr>
+            <td>
+                <table>
+                    <tr>
+                        <td>
+                            <div style="width:0px; height:0px; border-top: 50px solid lightblue; border-left: 50px solid darkblue; border-right: 50px solid blue"></div>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>
+                            <div style="width:0px; height:0px; border-top: 50px solid lightblue; border-left: 50px solid darkblue; border-right: 50px solid blue"></div>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
 
 
 </body>
