--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <table>
                     <tr>
                         <td>
-                            <div style="width:0px; height:0px; border-top: 50px solid lightblue; border-left: 50px solid darkblue; border-right: 50px solid blue"></div>
+                            <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; margin:0px"></div>
                         </td>
                     </tr>
                 </table>
@@ -27,7 +27,16 @@
                 <table>
                     <tr>
                         <td>
-                            <div style="width:0px; height:0px; border-top: 50px solid lightblue; border-left: 50px solid darkblue; border-right: 50px solid blue"></div>
+                            <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; margin:0px"></div>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>
+                            <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; margin:0px"></div>
                         </td>
                     </tr>
                 </table>
