--- a/index.html
+++ b/index.html
@@ -10,40 +10,12 @@
     <img src="image.png" width="400px">
     <hr>
 
-    <div style="width:0px;height:0px;border-top:100px solid green;border-bottom: 100px solid blue;border-right: 100px solid red;border-left: 100px solid yellow;"></div>
+    <div style="width:0px;height:0px;border-top:100px solid green;border-bottom: 100px solid blue;border-right: 100px solid red;border-left: 100px solid yellow"></div>
     <hr>
-    <table>
-        <tr>
-            <td>
-                <table>
-                    <tr>
-                        <td>
-                            <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; margin:0px"></div>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>
-                            <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; margin:0px"></div>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>
-                            <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; margin:0px"></div>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-
+    
+    <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; float:left"></div>
+    <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; float:left"></div>
+    <div style="width:0px; height:0px; border-top: 100px solid lightblue; border-left: 100px solid darkblue; border-right: 100px solid blue; float:left"></div>
 
 </body>
 
